# pgvector_trip_gpt

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
sqls/: execute_all_sql.sh
sqls/create/tables/: create_vector_table.sql
src/: embedding.py  main.py
